--- a/src/blocks/footer-menu/index.pug
+++ b/src/blocks/footer-menu/index.pug
@@ -7,7 +7,6 @@
         "submenu": {
           "level": "2",
           "submenuWrap": true,
-          "cssMod": "full-width",
           "items": [
             {"title": "О компании"},
             {"title": "Портфолио"},
@@ -21,6 +20,7 @@
         "submenu": {
           "level": "2",
           "submenuWrap": true,
+          "cssMod": "half-part",
           "items": [
             {
               "title": "Продвижение сайтов",
@@ -38,20 +38,12 @@
                   { "title": "Оптимизация" }
                 ]
               }
-            }
-          ]
-        },
-      },
-      {
-        "title": "Услуги",
-        "colorFront": true,
-        "submenu": {
-          "level": "2",
-          "items": [
+            },
             {
               "title": "SEO-аудит",
               "submenu": {
                 "level": "3",
+                "submenuWrap": true,
                 "items": [
                   { "title": "Коммерческий аудит" },
                   { "title": "Технический аудит" },
