--- a/src/blocks/form-short/index.pug
+++ b/src/blocks/form-short/index.pug
@@ -10,5 +10,5 @@ form.form-short.js-hidden-captcha(action="", type="post")
     span.field-checkbox__input-wrap
       input.field-checkbox__input(type='checkbox')
       span.field-checkbox__help-text Нажимая на кнопку я соглашаюсь с <a href="#">политикой конфидициальности</a>
-  div.form-short__field
-    div.button.button--primary-darken.button--form.js-hidden-button Оставить заявку
+  div.form-short__field.-ta-sm
+    div.button.button--primary-darken.js-hidden-button Оставить заявку
