--- a/src/blocks/form/index.pug
+++ b/src/blocks/form/index.pug
@@ -12,5 +12,5 @@ form.form.js-hidden-captcha(action="", type="post")
     span.field-checkbox__input-wrap
       input.field-checkbox__input(type='checkbox')
       span.field-checkbox__help-text Нажимая на кнопку я соглашаюсь с <a href="#">политикой конфидициальности</a>
-  div.form__field
-    div.button.button--primary-darken.button--form.js-hidden-button Отправить
+  div.form__field.-ta-sm
+    div.button.button--primary-darken.js-hidden-button Отправить
