--- a/src/blocks/main-slider/index.pug
+++ b/src/blocks/main-slider/index.pug
@@ -3,7 +3,6 @@
     .page-container.main-slider__item-inner
       .main-slider__info
         .main-slider__desc Premium Product
-        div.main-slider__title Продвижение сайтов
+        h1.main-slider__title Продвижение сайтов
       .main-slider__form
-        .main-slider__form-inner
           include ../form-short/index
