--- a/src/blocks/table-compare/index.pug
+++ b/src/blocks/table-compare/index.pug
@@ -1,5 +1,5 @@
-.h-scroll.v-scroll
-	.h-scroll__container.v-scroll__container
+.h-scroll
+	.h-scroll__container
 		table.table-compare
 			thead
 				tr
