--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -10,9 +10,9 @@ block content
 
   .wide-block.wide-block--gray-lighter
     .page-container
-      h2 Наши услуги
-      include ../../blocks/our-services/index
-  
+      h2.-ta-sm 
+        | Наши услуги
+      include ../../blocks/services/index
   .wide-block.wide-block--primary-light
     .page-container__form
       h2
@@ -26,11 +26,11 @@ block content
       include ../../blocks/table-compare/index
   .wide-block.-half-padding-top.wide-block--cases-fon
     .page-container
-      h2.-ta-lc
+      h2.-ta-sm
         | Наши кейсы
       include ../../blocks/our-cases/index
   .wide-block.wide-block--gradient
     .page-container
-      h2.-ta-cl
+      h2.-ta-sm
         | Наши преимущества
       include ../../blocks/our-advantages/index
