--- a/src/scss/_css-variables.scss
+++ b/src/scss/_css-variables.scss
@@ -49,8 +49,7 @@
   --blocks-margin-vertical:  2.5em;
 
   /* Сетка */
-  --grid-gutter-x:          15px;
-  --grid-gutter-y:          15px;
+  --grid-gutter:          15px;
 
   /* Разное */
   --transition-time:        .3s;
