--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -22,7 +22,7 @@
 @import '../blocks/form-short/style';
 @import '../blocks/page-content/style';
 @import '../blocks/moving-placeholder/style';
-@import '../blocks/our-services/style';
+@import '../blocks/services/style';
 @import '../blocks/tile-slider/style';
 @import '../blocks/form/style';
 @import '../blocks/v-scroll/style';
