--- a/src/blocks/form/style.scss
+++ b/src/blocks/form/style.scss
@@ -29,6 +29,7 @@
 
   &__item {
     margin-bottom: 18px;
+
     @media (min-width: $screen-lg) {
       .form__field {
         margin-top: 0;
@@ -43,45 +44,51 @@
 
   .field-text {
     color: var(--color-gray--dark);
+
     &__input--margin-bg {
       display: block;
       margin-right: 0;
-      margin-bottom: 0.75em;
+      margin-bottom: .75em;
     }
+
     &__input--margin-sm {
       display: block;
       margin-right: 0;
-      margin-bottom: 0.75em;
+      margin-bottom: .75em;
     }
+
     &__input-wrap {
       display: block;
       font-size: var(--font-size--large);
       color: var(--color-black);
       line-height: 1.35;
     }
+
     &__form-input {
       background: var(--color-white);
       border: 1px solid var(--color-white);
       font-size: var(--font-size);
-      padding: 0.5em 0 1.5em 1em;
+      padding: 1em 0 1em 1em;
+      outline: none;
     }
+
     @media (min-width: $screen-md) {
       &__input--margin-bg {
         margin-right: 2.75em;
         margin-bottom: 0;
       }
+
       &__input--margin-sm {
         margin-right: 2.15em;
         margin-bottom: 0;
       }
+      
       &__input-wrap {
         display: flex;
         align-items: center;
       }
-      &__form-input {
-        padding: 1.125em 0 0.625em 1em;
-      }
     }
+    
     @media (min-width: $screen-lg) {
       &__input--margin-sm {
         margin-right: 2.25em;
@@ -106,15 +113,18 @@
       color: var(--color-black);
       font-weight: 400;
       line-height: 1.25;
+      margin-left: 30px;
+      position: relative;
+      width: 42%;
       & a {
         color: inherit;
       }
   
       &::before {
         content: "";
-        display: inline-block;
-        vertical-align: middle;
-        margin-right: 10px;
+        position: absolute;
+        top: 5px;
+        left: -30px;
         width: 20px;
         height: 20px;
         background-image: url(../../blocks/form-short/images/checkbox-no-active.png);
@@ -124,7 +134,7 @@
       }
 
       @media (min-width: $screen-md) {
-        width: 35%;
+        width: 27%;
       }
     }
   }
