--- a/src/blocks/our-cases/index.pug
+++ b/src/blocks/our-cases/index.pug
@@ -1,17 +1,16 @@
-.case-slider.our-cases(data-flickity-options='{ "cellAlign": "left", "prevNextButtons": true, "groupCells": false, "lazyLoad": true }')
-  .our-cases__item
-    .our-cases__info
-      p Собственные методы продвижения запросов в ТОП 10 за месяц!
-      p Учитываем актуальные на сегодня внутренние и внешние факторы ранжирования сайта для получения топовых позиций в Яндекс и Google за минимальное время
-      p В первую очередь: продвигаем до результата высокочастотные и прибыльные для Вашего бизнеса ключевые слова, чтобы Ваш сайт, приносил как можно больше заявок от клиентов с помощью СЕО трафика
-      p Продвигаем сайты по приемлемой цене в Москве и в других регионах. 
-    .our-cases__img
-      include ../../blocks/table/index
-  .our-cases__item
-    .our-cases__info
-      p Собственные методы продвижения запросов в ТОП 10 за месяц!
-      p Учитываем актуальные на сегодня внутренние и внешние факторы ранжирования сайта для получения топовых позиций в Яндекс и Google за минимальное время
-      p В первую очередь: продвигаем до результата высокочастотные и прибыльные для Вашего бизнеса ключевые слова, чтобы Ваш сайт, приносил как можно больше заявок от клиентов с помощью СЕО трафика
-      p Продвигаем сайты по приемлемой цене в Москве и в других регионах. 
-    .our-cases__img
-      include ../../blocks/table/index
+.our-cases
+  .our-cases__text
+    p Собственные методы продвижения запросов в ТОП 10 за месяц!
+    p Учитываем актуальные на сегодня внутренние и внешние факторы ранжирования сайта для получения топовых позиций в Яндекс и Google за минимальное время
+    p В первую очередь: продвигаем до результата высокочастотные и прибыльные для Вашего бизнеса ключевые слова, чтобы Ваш сайт, приносил как можно больше заявок от клиентов с помощью СЕО трафика
+    p Продвигаем сайты по приемлемой цене в Москве и в других регионах.
+  .our-cases__case
+    .case-slider(data-flickity-options='{ "cellAlign": "left", "prevNextButtons": true, "groupCells": false, "lazyLoad": true }')
+      .our-cases__slide
+        include ../../blocks/table/index
+      .our-cases__slide
+        include ../../blocks/table/index
+      
+        
+
+  
