--- a/src/blocks/our-cases/style.scss
+++ b/src/blocks/our-cases/style.scss
@@ -1,40 +1,48 @@
 .our-cases {
-  &__item {
-    display: block;
-    width: 100%;
-  }
-  &__info {
+  display: block;
+  width: 100%;
+
+  &__text {
     font-weight: 300;
     font-size: var(--font-size--vast);
     line-height: 1.35;
     text-align: center;
     margin-bottom: 2.5em;
   }
-  &__img {
+
+  &__case {
     background-color: var(--color-white);
     border-left: 10px solid var(--color-mint);
     border-radius: 20px;
-    padding: 1em 0.5em;
+    padding: 1em .5em;
   }
+
+  &__slide {
+    width: 100%;
+  }
+
   @media (min-width: $screen-md) {
-    &__info {
+
+    &__text {
       text-align: left;
     }
-    &__img {
+
+    &__case {
       border-left: 15px solid var(--color-mint);
     } 
   }
+
   @media (min-width: $screen-xl) {
-    &__item {
-      display: flex;
-      align-items: center;
-    }
-    &__info {
+    display: flex;
+    align-items: center;
+
+    &__text {
       flex: 1 0 40%;
       margin-right: 5%;
       margin-bottom: 0;
     }
-    &__img {
+    
+    &__case {
       flex: 0 0 50%;
 			margin-top: 0;
 			max-width: 50%;
