--- a/src/blocks/page-container/style.scss
+++ b/src/blocks/page-container/style.scss
@@ -2,8 +2,8 @@
 	margin-left: auto;
 	margin-right: auto;
 	max-width: 1200px;
-	padding-left: var(--grid-gutter-x);
-	padding-right: var(--grid-gutter-x);
+	padding-left: var(--grid-gutter);
+	padding-right: var(--grid-gutter);
 	position: relative;
 	width: 100%;
 }
@@ -17,8 +17,8 @@
 	margin-left: auto;
 	margin-right: auto;
 	max-width: 840px;
-	padding-left: var(--grid-gutter-x);
-	padding-right: var(--grid-gutter-x);
+	padding-left: var(--grid-gutter);
+	padding-right: var(--grid-gutter);
 	position: relative;
 	width: 100%;
 }
