--- a/src/blocks/page-header/style.scss
+++ b/src/blocks/page-header/style.scss
@@ -1,6 +1,7 @@
 .page-header {
 
   $block-name: &; // #{$block-name}__element
+  position: relative;
 
   &__inner {
     display: flex;
@@ -8,7 +9,12 @@
     justify-content: center;
     background: inherit;
     padding-bottom: .5em;
-    padding-top: 0.75em;
+    padding-top: .75em;
+
+    &--hr {
+      border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    }
+
     @media (min-width: $screen-md) {
       justify-content: flex-end;
       padding-top: 1em;
@@ -21,21 +27,21 @@
     align-items: center;
     justify-content: space-between;
     background: inherit;
-    padding-bottom: 21px;
-    @media (min-width: $screen-md) {
-      display: none;
-    }
+    padding-top: var(--grid-gutter);
+    padding-bottom: var(--grid-gutter);
   }
 
   &__logo {
     display: block;
+
     img {
       display: block;
       width: 123px;
     }
-    @media (min-width: $screen-md) {
-      display: none;
-    }
+
+    // @media (min-width: $screen-md) {
+    //   display: none;
+    // }
   }
 
   &__burger {
@@ -45,16 +51,18 @@
   &__order {
     display: block;
     flex-shrink: 0;
-    padding-left: var(--grid-gutter-x);
+    padding-left: var(--grid-gutter);
+
     @media (min-width: $screen-md) {
       padding-left: 1.625em;
     }
   }
 
-  &__search {
-    display: block;
-    @media (min-width: $screen-md) {
-      display: none;
-    }
-  }
+  // &__search {
+  //   display: block;
+    
+  //   @media (min-width: $screen-md) {
+  //     display: none;
+  //   }
+  // }
 }
