--- a/src/blocks/page/style.scss
+++ b/src/blocks/page/style.scss
@@ -31,6 +31,8 @@
 			position: absolute;
 			transform: translateX(-100%);
 			transition: var(--transition-time);
+			top: 100%;
+      left: 0;
 
 			&.-is-active {
 				transform: translateX(0);
@@ -60,16 +62,18 @@ body {
 
 h1, .h1 {
   font-size: var(--font-size-h1);
-  font-weight: 400;
+  font-weight: 500;
   line-height: 1.05;
   text-transform: uppercase;
+	margin: 0 0 .75em 0;
 }
 
 h2, .h2 {
   font-size: var(--font-size-h2);
-  font-weight: 400;
+  font-weight: 500;
   line-height: 1.2;
   padding: 0;
+	margin: 0 0 .75em 0;
 }
 
 h3, .h3 {
@@ -77,6 +81,7 @@ h3, .h3 {
   font-weight: 500;
   line-height: 1.2;
   padding: 0;
+	margin: 0 0 .75em 0;
 }
 
 a {
