--- a/src/blocks/tile-slider/style.scss
+++ b/src/blocks/tile-slider/style.scss
@@ -34,7 +34,28 @@
 	}
 
 	& .flickity-page-dots {
-		display: none;
+		align-items: center;
+		bottom: 0;
+		display: flex;
+		height: 1.5em;
+		justify-content: center;
+		justify-items: center;
+		padding: 0 2.5em;
+		position: absolute;
+		transform: translateY(50%);
+		z-index: 5;
+
+		& .dot {
+			background-color: var(--color-gray--dark);
+			border-radius: 2px;
+			height: 3px;
+			opacity: .35;
+			width: 45px;
+
+			&.is-selected {
+				opacity: .75;
+			}
+		}
 	}
 
 	&:not(.is-draggable) .flickity-prev-next-button,
@@ -46,7 +67,7 @@
 		display: none;
 	}
 
-	@media (min-width: $screen-lg) {
+	@media (min-width: $screen-md) {
 		&::after {
 			content: '';
 		}
