--- a/src/pug/mixins/menu-multilevel.pug
+++ b/src/pug/mixins/menu-multilevel.pug
@@ -7,15 +7,13 @@ mixin menu-list(data, blockName)
     each item, i in data.items
       -
         let cssClassItem = blockName + '__item ' + blockName + '__item--lvl' + data.level;
-        let colorClassItem = blockName + '__link';
+        let colorClassItem = blockName + '__value--colorFront';
         index ++;
         if (item.submenu)
           cssClassItem += ' ' + blockName + '__item--parent';
-        if (item.colorFront)
-          colorClassItem += '--colorFront';
       li(class=cssClassItem)
 
-        a(href=item.url ? item.url : '#', class=blockName + '__link', class=blockName + '__link--lvl' + data.level, class=colorClassItem)
+        a(href=item.url ? item.url : '#', class=blockName + '__link', class=blockName + '__link--lvl' + data.level)
           = item.title
           if (item.iconID)
             svg: use(xmlns:xlink='http://www.w3.org/1999/xlink' xlink:href='#' + item.iconID)
@@ -31,6 +29,12 @@ mixin menu-list(data, blockName)
               if (item.submenu.cssMod)
                 cssClassSubmenu += ' ' + blockName + '__submenu--' + item.submenu.cssMod;
             div(class=cssClassSubmenu)
+              if (item.banner)
+                div(class=blockName + '__image')
+                  img(src=item.banner, alt="")
               +menu-list(item.submenu, blockName)
           else
+            if (item.banner)
+              div(class=blockName + '__image')
+                img(src=item.banner, alt="")
             +menu-list(item.submenu, blockName)
