--- a/src/scss/_modifiers.scss
+++ b/src/scss/_modifiers.scss
@@ -9,19 +9,12 @@
 .-ta-l { text-align: left; }
 .-ta-c { text-align: center !important; }
 .-ta-r { text-align: right; }
-.-ta-lc {
+.-ta-sm {
 	text-align: center;
 	@media (min-width: $screen-md) {
     text-align: left; 
 	}
 }
-.-ta-cl {
-	text-align: center;
-	@media (min-width: $screen-lg) {
-    text-align: left; 
-	}
-}
-
 .-no-tt {text-transform: none;}
 
 .-fs-tiny { font-size: var(--font-size--tiny) }
