--- a/src/blocks/page-header/index.pug
+++ b/src/blocks/page-header/index.pug
@@ -25,3 +25,4 @@ mixin page-header(mods)
         include ../header-search/index
       .page-header__burger
         include ../header-burger/index
+    .page-header__inner--sw
