--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -33,3 +33,6 @@
 @import '../blocks/case-slider/style';
 @import '../blocks/our-advantages/style';
 @import '../blocks/breadcrumb/style';
+@import '../blocks/portfolio/style';
+@import '../blocks/article-detail/style';
+@import '../blocks/portfolio-detail/style';
