--- a/src/blocks/page-container/style.scss
+++ b/src/blocks/page-container/style.scss
@@ -22,3 +22,13 @@
 	position: relative;
 	width: 100%;
 }
+
+.page-container__article {
+	margin-left: auto;
+	margin-right: auto;
+	max-width: 792px;
+	padding-left: var(--grid-gutter);
+	padding-right: var(--grid-gutter);
+	position: relative;
+	width: 100%;
+}
