--- a/src/scss/_modifiers.scss
+++ b/src/scss/_modifiers.scss
@@ -27,7 +27,7 @@
 .-no-padding { padding: 0; }
 .-no-padding-bottom { padding-bottom: 0 !important; }
 .-no-padding-top { padding-top: 0 !important; }
-.-half-padding-top { padding-top: 1rem !important; }
+с { padding-top: 1rem !important; }
 .-half-padding-bottom { padding-bottom: 2rem !important; }
 
 .-ws-nowrap { white-space: nowrap }
